<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_1sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robot_medium"
            android:gravity="center"
            android:padding="@dimen/_14sdp"
            android:text="@string/do_you_want_to_send_image"
            android:textColor="@color/colorLightBlack3"
            android:textSize="@dimen/_16ssp" />

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorLightGray"
            android:scaleType="centerCrop" />

        <EditText
            android:id="@+id/edMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_light_whitish_blue_tl_br_bl_round_30"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center_vertical"
            android:hint="@string/type_a_message"
            android:inputType="textMultiLine"
            android:minHeight="@dimen/_52sdp"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvYes"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_primary_tl_br_tr_round_30"
                android:fontFamily="@font/cabin_semi_bold"
                android:gravity="center"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp">

            </TextView>


            <TextView
                android:id="@+id/tvNo"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_light_pink_tl_bl_br_round_30"
                android:drawableEnd="@drawable/selector_radio_button_icon"
                android:fontFamily="@font/cabin_semi_bold"
                android:gravity="center"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>