<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:id="@+id/rlRoot"
    android:padding="@dimen/_20sdp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_stroke_light_gray_round_all_side_4dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_close"
            android:tint="@color/colorLightGray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/cabin_semi_bold"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/are_you_sure_to_cancel"
            android:textColor="@color/colorLightPink"
            android:textSize="@dimen/_16ssp" />


        <TextView
            android:id="@+id/tvRatingStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="$40 cancellation fee may apply if provider rejects cancellation request."
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorLightBlack2"
            android:textSize="@dimen/_12ssp" />


        <LinearLayout
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_white_grey_stroke"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textColor="@color/colorLightBlack2"
                android:textSize="@dimen/_14ssp">

            </TextView>

            <TextView
                android:id="@+id/tvYes"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_white_grey_stroke"
                android:backgroundTint="@color/colorLightPink"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>